# dipole_generator_cpp

./: CMakeLists.txt  GlobalData.hpp  Main.hpp  NumericTypes.cpp  NumericTypes.hpp  Point3D.hpp  Timer.cpp  Timer.hpp  cppcheck.bat  main.cpp
src/: .gitignore  BulkSupercellGenerator.cpp  GlobalData.hpp  GlobalData.hpp~  Main.hpp  Main.hpp~  Matrix-Main.cpp  Matrix-Main.cpp~  Matrix-Main.hpp  Matrix-Main.hpp~  OS-Dependent-Features.hpp  OS-Dependent-Features.hpp~  Point3D.cpp  Supercell-Bulk.cpp~  Supercell-Bulk.hpp  Supercell-Bulk.hpp~  Supercell-Dot.cpp  Supercell-Dot.hpp  Supercell-Dot.hpp~  Supercell-Film.cpp  Supercell-Film.cpp~  Supercell-Film.hpp  Supercell-Film.hpp~  Supercell-Main.cpp  Supercell-Main.cpp~  Supercell-Main.hpp  Supercell-Main.hpp~  Supercell-Wire.cpp  Supercell-Wire.hpp  Supercell-Wire.hpp~  SupercellConfiguration.cpp  T_Constants.hpp~  Template-Constants.hpp  Template-Constants.hpp~  Template-Input_Validation.hpp  Template-Input_Validation.hpp~  Utilities.hpp~  Vector-Main.cpp  Vector-Main.cpp~  Vector-Main.hpp  (+7 more)
src/holding area/: BulkSupercellGenerator.hpp  GlobalData.cpp  GlobalData.hpp  Matrix3D.cpp  Matrix3D.hpp  SupercellConfiguration.hpp  Vector3D.hpp
